fixed layout issues

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -19,7 +19,7 @@ body{
 
 header {
     width: 100%;
-    height: 5vh;
+    height: 10vh;
     font-family: $main-font;
     
 }
@@ -68,6 +68,7 @@ header {
         text-decoration: none;
         font-size: 20px;
         color: black;
+        margin: 15px;
     }
 
     &_link:hover {
@@ -109,11 +110,13 @@ main {
         font-size: 90px;
         line-height: 102px;
         letter-spacing: -2px;
+        margin: 15px;
     }
 
     .main_info{
         max-width: 410px;
         min-height: 98px;
+        margin: 15px;
     }
 }
 
@@ -149,12 +152,33 @@ footer{
     .main_content{
         max-width: 574px;
         min-height: 172px;
+        margin: 25px;
+    }
+
+    .main_heading{
+        font-size: 72px;
+        line-height: 83px;
+        text-align: center;
+        margin: 25px;
+    }
+
+    .main_info{
+        font-size: 22px;
+        line-height: 33px;
+        text-align: center;
+        margin: 25px;
     }
 
     .main_image{
-        align-self: flex-end;
+        align-self: center;
+        margin: 25px;
     }
     
+    footer{
+        img{
+            display:none;
+        }
+    }
 }
 
 @media screen and (max-width:400px) {
@@ -168,6 +192,29 @@ footer{
     header{
         .nav_list{
         display: none;
+        
+        }
+
+        .logo{
+            font-size: 24px;
+            line-height: 36px;
+        }
+    }
+
+    .main_content{
+        max-width: 211px;
+        min-height: 104px;
+
+        .main_heading{
+            font-size: 36px;
+            line-height: 40px;
+            text-align: center;
+        }
+
+        .main_info{
+            font-size: 12px;
+            line-height: 18px;
+            text-align: center;
         }
     }
 }
